Fix image on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -367,7 +367,7 @@ button {
 }
 
 .landing-images img {
-  width: auto;
+  width: 100%;
   max-height: 80vh;
   display: none;
   box-shadow: 10px 10px 20px 0 rgba(94, 47, 59, 0.2);
